styles.css
body {
  background-image: url('pexels-jplenio-1103970.jpg');
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: 100vw 100vh;
}

.button {
  background-color: #5776da;
  border: none;
  color: white;
  padding: 15px 32px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 4px 2px;
  cursor: pointer;
}

h1.moved {
  position: relative;
  color: rgb(0, 0, 0);
  font-size: 60px;
  text-align: right;
  background-color: #12121253;
  padding: 10px;
  margin: auto;
  width: 100%;
}

h2.moved {
  position: relative;
  color: rgb(0, 0, 0);
  font-size: 40px;
  text-align: right;
  background-color: rgba(18, 18, 18, 0.326);
  padding: 10px;
  margin: auto;
  width: 100%;
}

div {
  color: rgb(255, 162, 162);
  padding: 10px;
  width: 100%;
  background-color: rgba(18, 18, 18, 0.326);
  position: relative;
  margin: auto;
}

